# bot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  deploy.yml
src/: config.json  config.json.example  main.cpp
src/commands/: close_cmd.cpp  code_cmd.cpp  coding_cmd.cpp  commands.h  project_cmd.cpp  rule_cmd.cpp  ticket_cmd.cpp  topic_cmd.cpp  utils.cpp
src/filter/: Listener.cpp  Listener.h
src/globals/: globals.cpp  globals.h
src/messageManager/: message_handler.cpp  message_handler.h
src/message_manager/: message_handler.cpp  message_handler.h
src/res/: coding.txt  hints.txt  project.json  project.txt  topic.txt
src/utils/moderation/: moderation.cpp  moderation.h
src/utils/suggestion/: suggestion.cpp  suggestion.h
src/webhooks/: github_webhook_handler.cpp  github_webhook_handler.h
